--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -34,7 +34,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check
-        if: env.PUSH
+        if: env.PUSH == 'true'
         run: echo "This should not run"
 
       - name: Checkout Repo ⚡️
